AtCoder/APG4b/AP4/in_13.txt
In function ‘int main()’:
9:11: error: ‘i’ was not declared in this scope
   cout << i << endl;
           ^
